Make tabs system not visible on admin page

--- a/resonite_communities/clients/web/templates/admin/base.html
+++ b/resonite_communities/clients/web/templates/admin/base.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
+{% block extended_head_admin %}
+    <style>
+      .hero {
+        padding-bottom: 30px;
+      }
+    </style>
+{% endblock %}
 {% block admin_menu %}
 {% if user.is_superuser %}
       <aside class="menu">
