--- a/resonite_communities/clients/web/templates/admin/events.html
+++ b/resonite_communities/clients/web/templates/admin/events.html
@@ -1,26 +1,12 @@
 {% extends "admin/base.html" %}
 {% block extended_head %}
 <script src="/static/js/notification.js"></script>
-<script src="/static/js/alpine/events_alpine.js"></script>
+<script src="/static/js/alpine/pages/admin_events.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/css/notification.css">
 <style>
     .fixed-width {
         display: inline-block;
         width: 150px;
-    }
-
-    #notifications {
-        position: fixed;
-        bottom: 20px;
-        width: 250px;
-        right: 19px;
-    }
-
-    .notification {
-        margin: 5px 0;
-    }
-
-    .notification ul {
-        list-style: initial;
     }
 </style>
 {% endblock %}
