--- a/resonite_communities/clients/web/templates/index.html
+++ b/resonite_communities/clients/web/templates/index.html
@@ -33,7 +33,7 @@
     </style>
 {% endblock %}
 {% block alpine_components_head %}
-    <script defer src="/static/js/alpine/tabs.js"></script>
+    <script defer src="/static/js/alpine/pages/index.js"></script>
     <script defer src="/static/js/alpine/info_toggle.js"></script>
     <script defer src="/static/js/alpine/copy_facet_url.js"></script>
 {% endblock %}
