--- a/resonite_communities/clients/web/templates/admin/communities.html
+++ b/resonite_communities/clients/web/templates/admin/communities.html
@@ -8,6 +8,33 @@
     .required {
         border-color: red;
     }
+
+    .card {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .card-image {
+        margin-bottom: 0.5rem;
+    }
+
+    .card-content {
+        padding: 1rem;
+        flex-grow: 1;
+    }
+
+    .card-content .title {
+        margin-bottom: 0.5rem;
+    }
+
+    .card-footer .buttons {
+        margin: 10px;
+        width: 100%;
+    }
 </style>
 {% endblock %}
 {% block content %}
@@ -22,75 +49,105 @@
 
     <div x-show="activeTab === 'events'" style="width: 100%;">
 
-    <button class="button is-success" @click="handleCommunityAction('add', null, 'event')">Add event community</button>
+        <button class="button is-success" @click="handleCommunityAction('add', null, 'event')">Add event community</button>
 
-    <div class="grid">
-        {% for community in events_communities %}
-        <div class="cell">
-            <div class="card-image">
-                <figure class="image is-96x96">
-                    {% if community.logo %}
-                    <img src="{{ community.logo }}" alt="Community logo">
-                    {% else %}
-                    <img src="https://cdn.alicorn.network/resonite-communities.com/community_discord_placeholder.png" alt="Placeholder community logo">
-                    {% endif %}
-                </figure>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <p class="card-header-title">{{ community.name }}</p>
-                </div>
-                <div class="card-content">
-                    <div>
-                        <button class="button is-warning" @click="handleCommunityAction('edit', '{{ community.id }}', 'event')"><i class="fas fa-pen"></i></button>
-                        <button class="button is-danger" @click="handleCommunityAction('delete', '{{ community.id }}', 'event')"><i class="fas fa-trash"></i></button>
-                        <button class="button is-link" {% if not community.url %}title="disabled" disabled{% endif %}><i class="fas fa-up-right-from-square"></i></button>
+        <div class="columns is-multiline">
+            {% for community in events_communities %}
+            <div class="column is-one-fifth">
+                <div class="card">
+                    <div class="card-image has-text-centered pt-4">
+                        <figure class="image is-3by3 is-inline-block">
+                            {% if community.logo %}
+                            <img class="" src="{{ community.logo }}" alt="Community logo">
+                            {% else %}
+                            <img class="is-rounded" src="https://cdn.alicorn.network/resonite-communities.com/community_discord_placeholder.png" alt="Placeholder community logo">
+                            {% endif %}
+                        </figure>
+                    </div>
+                    <div class="card-content has-text-centered">
+                        <div class="columns is-flex-direction-column">
+                            <p class="title is-5">{{ community.name }}</p>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="buttons is-centered">
+                            <button class="button is-warning is-small" @click="handleCommunityAction('edit', '{{ community.id }}', 'event')">
+                                <span class="icon"><i class="fas fa-pen"></i></span>
+                            </button>
+                            <button class="button is-danger is-small" @click="handleCommunityAction('delete', '{{ community.id }}', 'event')">
+                                <span class="icon"><i class="fas fa-trash"></i></span>
+                            </button>
+                            <button class="button is-link is-small" {% if not community.url %}title="disabled" disabled{% endif %}>
+                                <span class="icon"><i class="fas fa-up-right-from-square"></i></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 
     <div x-show="activeTab === 'streams'" style="width: 100%;">
 
-    <button class="button is-success" @click="handleCommunityAction('add', null, 'stream')">Add stream community</button>
+        <button class="button is-success" @click="handleCommunityAction('add', null, 'stream')">Add stream community</button>
 
-    <div class="grid">
-        {% for community in streams_communities %}
-        <div class="cell">
-            <div class="card">
-                <div class="card-header">
-                    <p class="card-header-title">{{ community.name }}</p>
-                </div>
-                <div class="card-content">
-                    <div>
-                        <button class="button is-warning" @click="handleCommunityAction('edit', '{{ community.id }}', 'stream')"><i class="fas fa-pen"></i></button>
-                        <button class="button is-danger" @click="handleCommunityAction('delete', '{{ community.id }}', 'stream')"><i class="fas fa-trash"></i></button>
-                        <button class="button is-link" {% if not community.url %}title="disabled" disabled{% endif %}><i class="fas fa-up-right-from-square"></i></button>
+        <div class="columns is-multiline">
+            {% for community in streams_communities %}
+            <div class="column is-one-fifth">
+                <div class="card">
+                    <div class="card-image has-text-centered pt-4">
+                        <figure class="image is-3by3 is-inline-block">
+                            {% if community.logo %}
+                            <img class="" src="{{ community.logo }}" alt="Community logo">
+                            {% else %}
+                            <img class="is-rounded" src="https://cdn.alicorn.network/resonite-communities.com/community_discord_placeholder.png" alt="Placeholder community logo">
+                            {% endif %}
+                        </figure>
+                    </div>
+                    <div class="card-content has-text-centered">
+                        <div class="columns is-flex-direction-column">
+                            <p class="title is-5">{{ community.name }}</p>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="buttons is-centered">
+                            <button class="button is-warning is-small" @click="handleCommunityAction('edit', '{{ community.id }}', 'stream')">
+                                <span class="icon"><i class="fas fa-pen"></i></span>
+                            </button>
+                            <button class="button is-danger is-small" @click="handleCommunityAction('delete', '{{ community.id }}', 'stream')">
+                                <span class="icon"><i class="fas fa-trash"></i></span>
+                            </button>
+                            <button class="button is-link is-small" {% if not community.url %}title="disabled" disabled{% endif %}>
+                                <span class="icon"><i class="fas fa-up-right-from-square"></i></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
-</div>
 
-<div class="modal" x-show="isOpen" :class="{ 'is-active': isOpen }" x-cloak>
-    <div class="modal-background" @click="closeModal()"></div>
-    <div class="modal-card">
-        <header class="modal-card-head">
-            <p class="modal-card-title" x-text="modalTitle"></p>
-            <button class="delete" aria-label="close" @click="closeModal()"></button>
-        </header>
-        <section class="modal-card-body" x-html="modalBodyContent" id="modal-body">
-            <!-- Content will be dynamically injected here -->
-        </section>
-        <footer class="modal-card-foot">
-            <button class="button is-success" @click="saveCallback()" x-text="modalActionButtonText"></button>
-            <button class="button" @click="closeModal()">Cancel</button>
-        </footer>
+
+
+    <div class="modal" x-show="isOpen" :class="{ 'is-active': isOpen }" x-cloak>
+        <div class="modal-background" @click="closeModal()"></div>
+        <div class="modal-card">
+            <header class="modal-card-head">
+                <p class="modal-card-title" x-text="modalTitle"></p>
+                <button class="delete" aria-label="close" @click="closeModal()"></button>
+            </header>
+            <section class="modal-card-body" x-html="modalBodyContent" id="modal-body">
+                <!-- Content will be dynamically injected here -->
+            </section>
+            <footer class="modal-card-foot">
+                <button class="button is-success" @click="saveCallback()" x-text="modalActionButtonText"></button>
+                <button class="button" @click="closeModal()">Cancel</button>
+            </footer>
+        </div>
     </div>
+
 </div>
 
 {% endblock content %}
