--- a/resonite_communities/clients/web/templates/admin/communities.html
+++ b/resonite_communities/clients/web/templates/admin/communities.html
@@ -3,6 +3,8 @@
     <script src="/static/js/alpine/pages/admin_communities.js"></script>
 {% endblock %}
 {% block extended_head %}
+<script src="/static/js/notification.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/css/notification.css">
 <style>
     :required,
     .required {
@@ -147,6 +149,9 @@
             </footer>
         </div>
     </div>
+
+
+    <div id="notifications"></div>
 
 </div>
 
