Avoid to load the tab manager in the admin when not imported

--- a/resonite_communities/clients/web/templates/base.html
+++ b/resonite_communities/clients/web/templates/base.html
@@ -211,7 +211,7 @@
     </style>
 </head>
 
-<body x-data="tabManager()">
+<body x-data="typeof tabManager === 'function' ? tabManager() : {}">
 
     <section class="hero is-small is-link">
         <div class="hero-body">
