--- a/resonite_communities/clients/web/templates/admin/events.html
+++ b/resonite_communities/clients/web/templates/admin/events.html
@@ -56,6 +56,8 @@
                     </p>
                 </div>
                 <p class="is-size-7">{{ event.description }}</p>
+                <br>
+                <p class="is-size-6">{{ event.community.name }}</p>
             </td>
             <td style="text-align: right;">
                 <div>
