--- a/resonite_communities/clients/web/templates/admin/base.html
+++ b/resonite_communities/clients/web/templates/admin/base.html
@@ -7,7 +7,7 @@
     </style>
 {% endblock %}
 {% block admin_menu %}
-{% if user.is_superuser %}
+{% if user.is_superuser or user.is_moderator %}
       <aside class="menu">
         <p class="menu-label">General</p>
         <ul class="menu-list">
@@ -15,10 +15,14 @@
         </ul>
         <p class="menu-label">Administration</p>
         <ul class="menu-list">
+          {% if user.is_superuser %}
           <li><a class="{{ 'is-active' if request.url.path == '/admin/metrics' else '' }}" href="{{ '/admin/metrics' }}">Dashboard</a></li>
+          {% endif %}
           <li><a class="{{ 'is-active' if request.url.path == '/admin/communities' else '' }}" href="{{ '/admin/communities' }}">Communities</a></li>
           <li><a class="{{ 'is-active' if request.url.path == '/admin/events' else '' }}" href="{{ '/admin/events' }}">Events</a></li>
+          {% if user.is_superuser %}
           <li><a>Configuration</a></li>
+          {% endif %}
       </aside>
       {% endif %}
 {% endblock %}
