Fix admin page for small screen

--- a/resonite_communities/clients/web/templates/admin/base.html
+++ b/resonite_communities/clients/web/templates/admin/base.html
@@ -4,6 +4,12 @@
       .hero {
         padding-bottom: 30px;
       }
+      .menu {
+        max-width: 150px;
+      }
+      .main-page {
+        display: flex;
+      }
     </style>
 {% endblock %}
 {% block admin_menu %}
