--- a/resonite_communities/clients/web/templates/base.html
+++ b/resonite_communities/clients/web/templates/base.html
@@ -286,7 +286,7 @@
       </section>
 
 
-    <section class="section" style="min-height: 62vh">
+    <section class="section main-page" style="min-height: 62vh">
 
       {% block admin_menu %}{% endblock %}
 
